Fix full-bleed image css. Updates to patronslist

--- a/theme/styles/snippets/image-caption-module.scss
+++ b/theme/styles/snippets/image-caption-module.scss
@@ -1,12 +1,11 @@
 .ImageCaptionModule {
   &--style-full-bleed {
-    left: 50%;
-    margin-left: -50%;
-    margin-right: -50%;
-    max-width: 100vw;
+    width: 100vw;
     position: relative;
+    left: 50%;
     right: 50%;
-    width: 100%;
+    margin-left: -50vw;
+    margin-right: -50vw;
   }
 
   &__images {
@@ -16,20 +15,20 @@
       div:not(:last-of-type) {
         margin-right: 0.6875rem;
 
-        @include media('md-up') {
+        @include media("md-up") {
           margin-right: 1.9375rem;
         }
       }
 
-      @include media('xs-up') {
+      @include media("xs-up") {
         max-height: 15rem;
       }
 
-      @include media('md-up') {
+      @include media("md-up") {
         max-height: 20rem;
       }
 
-      @include media('lg-up') {
+      @include media("lg-up") {
         max-height: 30rem;
       }
     }
