--- a/theme/styles/snippets/patrons-list.scss
+++ b/theme/styles/snippets/patrons-list.scss
@@ -1,16 +1,17 @@
 .AllPatrons {
   max-height: 600px;
+  overflow-y: hidden;
   position: relative;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: minmax(min-content, max-content);
   grid-gap: 1rem;
-  text-align: center;
 
   @include media("md-up") {
     max-width: 65rem;
     width: 75%;
     margin: 0 auto;
+    grid-template-columns: repeat(3, 1fr);
   }
 
   &:after {
@@ -35,5 +36,6 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow-x: hidden;
+    text-transform: uppercase;
   }
 }
